//file:noinspection GroovyAssignabilityCheck
plugins {
    id 'base'
    id 'jacoco'
}

allprojects {
    group = 'com.senthora.gatlingfx'
    version = '0.1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

def libraryProjects = subprojects.findAll {
    it.name != 'launcher'
}

configure(libraryProjects) {
    apply plugin: 'java-library'
    apply plugin: 'jacoco'
    apply plugin: 'maven-publish'
    apply plugin: 'signing'

    base {
        archivesName = "${rootProject.name}-${project.name}"
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    jacoco {
        toolVersion = '0.8.14'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()

        if (name == "integrationTest") {
            outputs.upToDateWhen { false }
            shouldRunAfter(tasks.test)
            systemProperty(
                    "gatlingfx.logs.directory",
                    rootProject.file("build/gatlingfx").absolutePath
            )
            jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
        }
        testLogging {
            events "passed", "skipped", "failed"
            showStandardStreams = true
        }
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }

    tasks.jacocoTestReport {
        dependsOn tasks.test

        reports {
            xml.required = true
            html.required = true
        }
    }

    testing {
        suites {
            integrationTest(JvmTestSuite) {}
        }
    }

    if (sourceSets.findByName('integrationTest') != null) {
        configurations {
            integrationTestRuntimeElements {
                canBeConsumed = true
                canBeResolved = false

                extendsFrom integrationTestRuntimeClasspath

                outgoing.capability(
                        "${project.group}:${project.name}-integration-tests:${project.version}"
                )
            }
        }
        tasks.register('integrationTestJar', Jar) {
            archiveClassifier = 'integration-test'

            from sourceSets.integrationTest.output
        }
        artifacts {
            integrationTestRuntimeElements integrationTestJar
        }
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java

                artifactId = "gatlingfx-${project.name}"

                pom {
                    name = "GatlingFx ${project.name.capitalize()}"
                    description = "Lightweight toolkit for building reusable and maintainable Gatling simulations."
                    url = "https://github.com/senthora/gatlingfx"

                    licenses {
                        license {
                            name = "Apache License, Version 2.0"
                            url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
                        }
                    }
                    developers {
                        developer {
                            id = "senthora"
                            name = "meowpow-png"
                        }
                    }
                    scm {
                        url = "https://github.com/senthora/gatlingfx"
                        connection = "scm:git:https://github.com/senthora/gatlingfx.git"
                        developerConnection = "scm:git:git@github.com:senthora/gatlingfx.git"
                    }
                }
            }
        }
    if (!version.toString().endsWith("-SNAPSHOT")) {
        signing {
            useGpgCmd()
            sign publishing.publications.mavenJava
        }
    }
}

tasks.register('jacocoTestReport', JacocoReport) {
    group = "verification"
    description = "Generates aggregate jacoco test coverage report"

    dependsOn subprojects.collectMany { project ->
        project.tasks.matching {
            it.name == 'jacocoTestReport'
        }
    }
    additionalSourceDirs.from files(subprojects.sourceSets.main.allSource.srcDirs)
    sourceDirectories.from files(subprojects.sourceSets.main.allSource.srcDirs)
    classDirectories.from files(subprojects.sourceSets.main.output)

    executionData.from fileTree(layout.projectDirectory) {
        include '**/build/jacoco/*.exec'
    }
    reports {
        xml.required = true
        html.required = true

        xml.outputLocation = layout.buildDirectory.file(
                'reports/jacoco/jacocoRootReport.xml'
        )
        html.outputLocation = layout.buildDirectory.dir(
                'reports/jacoco/html'
        )
    }
}

tasks.named('clean') {
    delete layout.buildDirectory
}
